# nmiai_astar

./: .gitignore  CLAUDE.md  FINAL_INFORMATION_DOCUMENT.md  FINDINGS.md  LEARNINGS.md  NEXT_STEPS.md  README.md  REPORT_2026-03-22.md  RESEARCH_LOG_2026-03-21.md  SUMMARY.md  analyze_observations.py  auto_solve.py  benchmark.py  benchmark_avg5.py  benchmark_obs.py  check_status.py  cnn_probe.py  main.py  ml_experiments.py  ml_solver.py  overnight.sh  pyproject.toml  round1_data.json  score_fit_probe.py  sim_blend_probe.py  sim_s0_0_0.json  solve.py  solve_v2.py
