[project]
name = "astar"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
